h1. CHANGELOG

h2. 2.4.44 April 12, 2014

* use 'example.com' for domain_name in secrets.yml file
* fix for rails-omniauth secrets.yml file
* fix email recipe to restore correct behavior for 'none' option

h2. 2.4.43 April 12, 2014

* add pry as an option (contributed by Stefan Wienert)
* add recipe for deployment with Capistrano (contributed by Stefan Wienert)

h2. 2.4.42 April 11, 2014

* add 'domain_name' to 'config/secrets.yml' file

h2. 2.4.41 April 11, 2014

* updates for Rails 4.1.0 final
* fix for retrieving postgres host value in prefs (contributed by Atsushi Hamtaro Ishida)

h2. 2.4.40 April 4, 2014

* add MRI 2.1 to platforms for binding_of_caller gem (contributed by Chad Ingram)

h2. 2.4.39 April 3, 2014

* update 'megatest' feature to Rails 4.1 and Ruby 2.1 (contributed by Mark D. Blackwell)

h2. 2.4.38 March 7, 2014

* support option for 'Devise confirmable' with Rails 4.1 and Pundit (fixes #287)
* send emails in development mode (reverts #272)

h2. 2.4.37 March 6, 2014

* no need to specify foundation-rails version (foundation-rails 5.2.0.0 fixes #281)

h2. 2.4.36 March 2, 2014

* fix error when 'SMTP' is selected as an email option (fixes #286)

h2. 2.4.35 March 1, 2014

* update 'rails-bootstrap' example application for Rails 4.1

h2. 2.4.34 March 1, 2014

* update 'rails-foundation' example application for Rails 4.1

h2. 2.4.33 February 27, 2014

* add 'rails-devise-pundit' example application to 'apps4' recipe

h2. 2.4.32 February 26, 2014

* update 'rails-omniauth' example application for Rails 4.1
* skip helpers and assets when generating a controller

h2. 2.4.31 February 24, 2014

* generate Devise registration forms after database migrations are complete

h2. 2.4.30 February 24, 2014

* change prompts

h2. 2.4.29 February 24, 2014

* update 'rails-devise' example application for Rails 4.1
* for Rails 4.1, use the Figaro master pending next release of Figaro (fixes #280)
* remove 'rake db:test:prepare' (deprecated)
